Sat May 30 09:02:51 2015  Eric Wong  <e@80x24.org>

	* include/ruby/intern.h (rb_generic_ivar_table): deprecate
	* internal.h (rb_attr_delete): declare
	* marshal.c (has_ivars): use rb_ivar_foreach
	  (w_ivar): ditto
	  (w_object): update for new interface
	* time.c (time_mload): use rb_attr_delete
	* variable.c (generic_ivar_delete): implement
	  (rb_ivar_delete): ditto
	  (rb_attr_delete): ditto
	  [ruby-core:69323] [Feature #11170]

Sat May 30 09:14:28 2015  Scott Francis  <scott.francis@shopify.com>

	* cont.c (cont_free): check if ruby_current_thread is still valid.
	  [Fix GH-914]

Sat May 30 08:36:04 2015  Eric Wong  <e@80x24.org>

	* variable.c (static int special_generic_ivar): move
	  (rb_generic_ivar_table): rewrite for compatibility
	  (gen_ivtbl_bytes): new function
	  (generic_ivar_get): update to use ivar index
	  (generic_ivar_update): ditto
	  (generic_ivar_set): ditto
	  (generic_ivar_defined): ditto
	  (generic_ivar_remove): ditto
	  (rb_mark_generic_ivar): ditto
	  (givar_i): ditto
	  (rb_free_generic_ivar): ditto
	  (rb_mark_generic_ivar_tbl): ditto
	  (rb_generic_ivar_memsize): ditto
	  (rb_copy_generic_ivar): ditto
	  (rb_ivar_set): ditto
	  (rb_ivar_foreach): ditto
	  (rb_ivar_count): ditto
	  (givar_mark_i): remove
	  (gen_ivtbl_mark): new function
	  (gen_ivar_each): ditto
	  (iv_index_tbl_extend): update for struct ivar_update
	  (iv_index_tbl_newsize): ditto
	  [ruby-core:69323] [Feature #11170]

Sat May 30 08:10:46 2015  Eric Wong  <e@80x24.org>

	* variable.c (iv_index_tbl_make): extract from rb_ivar_set
	  (iv_index_tbl_extend): ditto
	  (iv_index_tbl_newsize): ditto
	  (rb_ivar_set): use extracted functions
	  [ruby-core:69323] (Part 1)

Fri May 29 17:39:14 2015  Koichi Sasada  <ko1@atdot.net>

	* tool/make_hgraph.rb: added.

Fri May 29 14:39:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): out of range NTH_REF is always
	  nil.

	* parse.y (parse_numvar): check overflow of NTH_REF and range.